fix: getMenus