@@ -191,8 +191,8 @@ public class SaleController {
     public ShowSaleSummaryDto showSaleSummary(SaleSummaryDateDto saleSummaryDateDto){
         List<Object[]> totalInfo = saleRepository.getTotalmember(saleSummaryDateDto.getStartDate(), saleSummaryDateDto.getEndDate());
         return ShowSaleSummaryDto.builder()
-                .totalMember((Long) totalInfo.get(0)[0])
-                .totalPrice((Long) totalInfo.get(0)[1])
+                .totalMember((Long) totalInfo.getFirst()[0])
+                .totalPrice((Long) totalInfo.getFirst()[1])
                 .payments(saleRepository.findPaymentByDate(saleSummaryDateDto.getStartDate(), saleSummaryDateDto.getEndDate()))
                 .menus(saleRepository.findSummaryMenuByDate(saleSummaryDateDto.getStartDate(), saleSummaryDateDto.getEndDate()).stream()
                         .map(arr -> new SummaryMenuDto((String) (arr[0] + " " + arr[1]), (String) arr[2], ((BigDecimal) arr[3]).longValue(), ((BigDecimal) arr[4]).longValue())).collect(Collectors.toList()))
